--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -3,7 +3,7 @@ colorama==0.4.4
 Flask==2.1.1
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
-gunicorn==20.1.0
+gunicorn
 importlib-metadata==4.11.3
 itsdangerous==2.1.2
 Jinja2==3.1.1
@@ -11,3 +11,4 @@ MarkupSafe==2.1.1
 SQLAlchemy==1.4.34
 Werkzeug==2.1.1
 zipp==3.7.0
+psycopg2
