--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   web:
-    image: flask_todo
+    image: 8285/flask_todo
     restart: always
     container_name: flask_todo_test
     ports:
