--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   web:
     image: 8285/flask_todo
     restart: always
-    container_name: flask_todo_test
+    container_name: flask_todo
     ports:
       - 5001:5000
     environment:
