--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
 
   proxy:
     build: proxy
+    container_name: todo_proxy
     restart: always
     ports:
       - 80:80
@@ -21,6 +22,7 @@ services:
 
   db:
     image: postgres:13
+    container_name: todo_db
     restart: always
     ports:
       - 5432:5432
